log出力を追加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# logleve settings
+logging.level.org.springframework=ERROR
+logging.level.jp.co.litemo.sm1=DEBUG
+
+# logfile output path
+logging.file.name=logs/application.log
